--- a/solutions-cw/views/hello.pug
+++ b/solutions-cw/views/hello.pug
@@ -1,13 +1,4 @@
 extends layout
 
 block content
-	p.hello Hello
-	//- .wrapper.ohnooo
-	//- 	- const upDog = dog.toUpperCase();
-	//- 	p.hello Hello my dog's name is #{upDog}!
-	//- 	span Yo!
-	//- 	img.dog(src='dog.jpg' alt=`${dog.toUpperCase()}`)
-
-	//- h2 
-	//- 	|	Hello
-	//- 	em How are you?
+	h2 Sale ends in #{h.moment().endOf('day').fromNow()}
